--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             color: #007bff;
             cursor: pointer;
         }
+        .checklist {
+            list-style: none;
+            padding: 0;
+        }
         .checklist li {
             margin-bottom: 8px;
             display: flex;
@@ -133,7 +137,10 @@
             </tr>
             <tr class="expandable-row">
                 <td colspan="6">
-                    <p>Descrição: A equipe de marketing solicitará cotações das principais agências para organizar o evento de lançamento do SUV-B. O objetivo é selecionar a melhor agência com base em custo-benefício e qualidade de entrega.</p>
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Solicitar propostas das agências de eventos</li>
+                        <li><input type="checkbox" class="task"> Confirmar o recebimento de cotações</li>
+                    </ul>
                 </td>
             </tr>
             <tr class="clickable">
@@ -146,7 +153,10 @@
             </tr>
             <tr class="expandable-row">
                 <td colspan="6">
-                    <p>Descrição: Acompanhamento do progresso das cotações recebidas das agências, assegurando a qualidade e o detalhamento dos serviços propostos.</p>
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Revisar as cotações recebidas</li>
+                        <li><input type="checkbox" class="task"> Solicitar ajustes, se necessário</li>
+                    </ul>
                 </td>
             </tr>
             <tr class="clickable">
@@ -159,7 +169,10 @@
             </tr>
             <tr class="expandable-row">
                 <td colspan="6">
-                    <p>Descrição: Avaliação inicial das propostas recebidas das agências. As propostas serão pré-selecionadas com base em critérios de criatividade, custos e capacidade técnica.</p>
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Analisar as propostas com base no custo-benefício</li>
+                        <li><input type="checkbox" class="task"> Fazer pré-seleção de três agências finalistas</li>
+                    </ul>
                 </td>
             </tr>
 
@@ -175,11 +188,117 @@
             </tr>
             <tr class="expandable-row">
                 <td colspan="6">
-                    <p>Descrição: Lançamento de campanha televisiva de awareness focada nos diferenciais do SUV-B e no fortalecimento da marca Toyota no mercado brasileiro. Serão abordados temas de segurança, tecnologia e eficiência de combustível.</p>
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Confirmar horário nobre nos canais de TV</li>
+                        <li><input type="checkbox" class="task"> Aprovar roteiros criativos para as peças</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr class="clickable">
+                <td>02/11/2024</td>
+                <td>Início da campanha digital (Google, Facebook, Instagram)</td>
+                <td>DAVID</td>
+                <td>Público digital (30-45 anos)</td>
+                <td>Campanha digital segmentada</td>
+                <td class="budget">R$ 10M</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Configurar anúncios segmentados no Google</li>
+                        <li><input type="checkbox" class="task"> Publicar anúncios patrocinados nas redes sociais</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr class="clickable">
+                <td>03/11/2024</td>
+                <td>Publicação de outdoors em SP e RJ</td>
+                <td>DAVID</td>
+                <td>Público em trânsito</td>
+                <td>OOH lançado em pontos estratégicos</td>
+                <td class="budget">R$ 6M</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Definir os locais de alta circulação para os outdoors</li>
+                        <li><input type="checkbox" class="task"> Realizar a impressão e instalação dos materiais OOH</li>
+                    </ul>
                 </td>
             </tr>
 
-            <!-- Detalhamento de outras atividades semelhantes segue a mesma lógica... -->
+            <!-- Dezembro 2024 -->
+            <tr><td colspan="6"><strong>Dezembro 2024 - Evento de Lançamento e Preparação das Concessionárias</strong></td></tr>
+            <tr class="clickable">
+                <td>01/12/2024</td>
+                <td>Reunião de alinhamento final com agências</td>
+                <td>Time de Marketing Toyota</td>
+                <td>Interno</td>
+                <td>Planejamento detalhado para o evento</td>
+                <td>-</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Confirmar todos os detalhes logísticos</li>
+                        <li><input type="checkbox" class="task"> Validar roteiro do evento e ações com agências</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr class="clickable">
+                <td>02/12/2024</td>
+                <td>Início da montagem do evento de lançamento</td>
+                <td>Agência de Eventos</td>
+                <td>Imprensa, concessionárias</td>
+                <td>Montagem de infraestrutura iniciada</td>
+                <td class="budget">R$ 500K</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Montar palcos e áreas de exposição</li>
+                        <li><input type="checkbox" class="task"> Preparar recursos audiovisuais para o evento</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <!-- Janeiro 2025 -->
+            <tr><td colspan="6"><strong>Janeiro 2025 - Ativações nas Concessionárias e Promoções</strong></td></tr>
+            <tr class="clickable">
+                <td>01/01/2025</td>
+                <td>Início dos test-drives nas concessionárias</td>
+                <td>Rede de Concessionárias</td>
+                <td>Consumidores interessados</td>
+                <td>Test-drives iniciados</td>
+                <td class="budget">R$ 8M</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Organizar campanhas de test-drive nas principais lojas</li>
+                        <li><input type="checkbox" class="task"> Promover test-drives com clientes VIPs</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <!-- Fevereiro-Março 2025 -->
+            <tr><td colspan="6"><strong>Fevereiro-Março 2025 - Ações Contínuas de Conversão</strong></td></tr>
+            <tr class="clickable">
+                <td>01/02/2025</td>
+                <td>Acompanhamento contínuo de conversão nas concessionárias</td>
+                <td>Rede de Concessionárias</td>
+                <td>Consumidores interessados</td>
+                <td>Relatórios semanais de desempenho</td>
+                <td>-</td>
+            </tr>
+            <tr class="expandable-row">
+                <td colspan="6">
+                    <ul class="checklist">
+                        <li><input type="checkbox" class="task"> Avaliar desempenho das campanhas de vendas nas lojas</li>
+                        <li><input type="checkbox" class="task"> Ajustar estratégias conforme os relatórios de desempenho</li>
+                    </ul>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -214,7 +333,21 @@
         return new Intl.NumberFormat('pt-BR').format(value);
     }
 
+    // Atualizar barra de progresso
+    const tasks = document.querySelectorAll('.task');
+    const progressBar = document.getElementById('main-progress-bar');
+    function updateProgressBar() {
+        const completedTasks = document.querySelectorAll('.task:checked').length;
+        const totalTasks = tasks.length;
+        const progress = (completedTasks / totalTasks) * 100;
+        progressBar.style.width = progress + '%';
+    }
+    tasks.forEach(task => {
+        task.addEventListener('change', updateProgressBar);
+    });
+
     updateBudget(); // Chamada inicial para exibir os valores corretamente
+    updateProgressBar(); // Atualizar barra de progresso ao carregar a página
 </script>
 
 </body>
